# mqtt_testapp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  output_huawei.json  test.py
conf/: huawei.conf  ini.conf  result.conf  server.crt  test.conf  tianyi.conf  zxykey.cer
include/: cJSON.h  common.h  cts.h  cts_client.h  cts_handler_gw.h  memwatch.h  mqtt_client.h  util.h
src/: CMakeLists.txt  cJSON.c  common.c  cts_client.c  cts_handler_gw.c  log.c  main.c  memwatch.c  mqtt_client.c  util.c
